Safeguard against overlapping table data cells: set table-layout to fixed and overflow to auto

--- a/app/assets/stylesheets/administrate/base/_tables.scss
+++ b/app/assets/stylesheets/administrate/base/_tables.scss
@@ -1,6 +1,7 @@
 table {
   border-collapse: collapse;
   font-size: 0.9em;
+  table-layout: fixed;
   text-align: left;
 
   a {
@@ -38,6 +39,7 @@ th {
   font-kerning: normal;
   font-variant-ligatures: common-ligatures, contextual;
   font-variant-numeric: lining-nums, tabular-nums;
+  overflow: auto;
   padding: 0.75rem;
   vertical-align: middle;
 
